2010-04-23  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\,, \dotaccent, \tieaccents, \ubaraccent): use
	\ptex... now that these commands are further down in the file.

2010-04-22  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\indexdummies): define \{ and \} as before,
	so they don't get expanded in writing the index.  Report
	from Peter Breitenlohner.

2010-04-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\@): use \char64 from the current font, instead
	of forcing typewriter.
	(\mylbrace, \mybrace): use braces from \ecfont, ditto.
	Suggestion from Mark Polesky, 16 Apr 2010 22:24:07.

2010-04-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\hbadness): increase to 6666, since we've used
	that for various GNU publications.

2010-04-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (part): new description for new command @part.
	* doc/refcard/txirefcard.tex: add it.
	* util/texinfo.dtd (part): new element.
	
	* doc/texinfo.tex (\entry): correct redefinition of @* for toc's.
	(\definetextfontsizexi, \definetextfontsizex): reset \textleading,
	\parskip appropriately, call \textfonts.

2010-03-30  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (input_file_name_decode): use [A-Za-z] rather than
	[A-z], which gets "invalid range end" with new grep in
	en_US.utf8 and other UTF-8 locales.
	Report from Martin von Gagern, 29 Mar 2010 12:34:09.

2010-03-21  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\headingsoff): new macro to turn off all
	headings/footings.
	(\HEADINGSoff, \chapoddpage): use it.
	
	(\part, \partzzz): new command @part, always on an odd page.
	(\numeralbox, \partentry, \shortpartentry): handle parts
        in the tables of contents.
	
        (\entry): locally \let\* = \space, so explicit
	line breaks in titles don't become line breaks in the toc's.
	
	(\flushright): need to \relax after glue assignment, lest
	a following L disappear as part of filll glue.
	
	(\unmlevel): rename to \unnlevel.

2010-03-18  Karl Berry  <karl@gnu.org>
