@@ -1,3 +1,9 @@
+2010-05-04  Jim Meyering  <meyering@redhat.com>
+
+	* util/gendocs.sh: make its "-s FILE" option more useful;
+	when honoring the -s FILE option, update
+	$PACKAGE to reflect the probably-different basename of "FILE".
+
 2010-04-23  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.tex (\,, \dotaccent, \tieaccents, \ubaraccent): use
